2008-12-15  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation by Daniel Mustieles

2008-12-01  Frederic Peters  <fpeters@0d.be>

	* C/jhbuild.xml: fixed XML well-formedness (closes: #562855)

2008-11-24  Frederic Peters  <fpeters@0d.be>

	* C/jhbuild.xml: fixed typos spotted by Susana Pereira.
	(closes: #562044)

2008-11-22  Jorge Gonzalez  <jorgegonz@svn.gnome.org>  

	* es/es.po: Updated Spanish translation

2008-11-10  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation by Daniel Mustieles

2008-11-08  Frederic Peters  <fpeters@0d.be>

	* C/jhbuild.xml: removed reference to a specific default version
	number; so it doesn't need to be updated whenever the default moduleset
	is updated.

2008-10-23  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation by Daniel Mustieles

2008-10-16  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation by Daniel Mustieles

2008-09-28  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation by Daniel Mustieles

2008-09-18  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation by Daniel Mustieles

2008-09-14  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation by Daniel Mustieles

2008-09-10  Craig Keogh <cskeogh@adam.com.au>

	* C/jhbuild.xml: Support -f force for tinderbox too.  (closes: #549889)

2008-09-04  Frederic Peters  <fpeters@0d.be>

	* C/jhbuild.xml: added explanation about different checkout modes.

2008-09-04  Frederic Peters  <fpeters@0d.be>

	* C/jhbuild.xml: fixed grammar in the description of the skip
	configuration variable.  (closes: #550838; thanks to Brian)

2008-08-24  Frederic Peters  <fpeters@0d.be>

	* C/jhbuild.xml: removed setting of os.environ['INSTALL'] in sample
	minimalistic jhbuildrc as it is now done automatically, and through
	the installprog configuration variable.
