@@ -1,3 +1,8 @@
+2008-12-25  Frederic Peters  <fpeters@0d.be>
+
+	* C/jhbuild.xml: added some crosslinking, and developed the svnroots
+	configuration variable.
+
 2008-12-15  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation by Daniel Mustieles
